encoding of man

--- a/manual/reudywin.html
+++ b/manual/reudywin.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=euc-jp">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>ロイディ Ver.3.09 Windowsでの準備から実行まで --- SSB </title>
   <link href="./style.css" type="text/css" rel="stylesheet" />  
   </head>
